--- a/cursos.html
+++ b/cursos.html
@@ -100,13 +100,13 @@
             <ul class="botoes-footer">
                 <li>
                     <div class="botao3">
-                        <a href="#">quero ser prof</a>
+                        <a href="./contato.html">quero ser prof</a>
                     </div>
                 </li>
                 <br>
                 <li>
                     <div class="botao3">
-                        <a href="#">aqui tem outro link</a>
+                        <a href="./blog.html">aqui tem outro link</a>
                     </div>
                 </li>
             </ul>
