Ajustes p/ telas pequenas

--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,8 @@
         <section>
             <div class="container1">
                 <div class="banner-home">
-                    <h1>MAIS CONTEÚDO PARA VOCÊ</h1>
+                    <h1>MAIS CONTEÚDO <br>
+                        PARA VOCÊ</h1>
                     <br>
                     <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
                         magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
